--- a/index.html
+++ b/index.html
@@ -7,25 +7,26 @@
             content="width=device-width, initial-scale=1.0"
         />
 
+        <!--=============== FONT FAMILY ===============-->
+        <link
+            rel="preconnect"
+            href="https://fonts.googleapis.com"
+        />
+        <link
+            rel="preconnect"
+            href="https://fonts.gstatic.com"
+            crossorigin
+        />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap"
+            rel="stylesheet"
+        />
+
         <!--=============== FAVICON ===============-->
         <link
             rel="shortcut icon"
-            href=""
+            href="./favicon.png"
             type="image/x-icon"
-        />
-
-        <!--=============== BOXICONS ===============-->
-
-        <!--=============== SWIPER CSS ===============-->
-        <link
-            rel="stylesheet"
-            href=""
-        />
-
-        <!--=============== CSS ===============-->
-        <link
-            rel="stylesheet"
-            href=""
         />
 
         <title>Responsive real state website - Bedimcode</title>
